// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > applies lightness multiplier to background 1`] = `
{
  "a": "#11160e",
  "b": "#1d231a",
}
`;

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#11160e",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#10170d",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#3f4b43",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#57655f",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#667a71",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#738b80",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#7d9a8d",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#87a799",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#90b3a3",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#a1bcae",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#25100b",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#88230f",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#ad3c1c",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#c4522d",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#cd6949",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d37d60",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#d88d74",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#dc9c87",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#dfaa97",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#0f1808",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#344f1c",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#4d6a34",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#637d4f",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#758c65",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#859a77",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#94a688",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#a1b097",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#acbaa5",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#171610",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4e4833",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#6b6242",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#81754c",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#928558",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#a19362",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#ae9f6c",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#baab75",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#c4b580",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#111615",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#384e2d",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#54684a",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#697a62",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#7b8a75",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#8a9785",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#98a394",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#a4aea1",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#b0b8ad",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#17150e",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#4f4829",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#6f613b",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#89724e",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#9f805e",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#b28c6d",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#bc997e",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#c3a68f",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#cab19e",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#13160f",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3d4d2c",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#516936",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#607e48",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#708b80",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#7b98a5",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#8ba3b0",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#9aaeb9",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#a7b8c2",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#19150f",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#55462b",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#755f35",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#8e713b",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#a4803f",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#b68d42",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#c3994c",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#caa665",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#cfb27a",
        },
      ],
    },
  ],
  "terminal": [
    "#11160e",
    "#88230f",
    "#344f1c",
    "#4e4833",
    "#384e2d",
    "#4f4829",
    "#3d4d2c",
    "#57655f",
    "#3f4b43",
    "#d37d60",
    "#859a77",
    "#a19362",
    "#8a9785",
    "#b28c6d",
    "#7b98a5",
    "#7d9a8d",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#15150d",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#17160c",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#48493b",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#616353",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#747766",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#818877",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#8c9786",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#96a493",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#9faf9e",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#acbaaa",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#250f0f",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#8a1e24",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#b5303b",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#ca4952",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#d16468",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d7787b",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#db8a8b",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#de999a",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e2a7a7",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#14160d",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#464a39",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#606455",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#74776a",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#83877c",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#91958b",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#9ea199",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#aaaca6",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#b4b6b1",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#151512",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4a483e",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#656254",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#797663",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#8a8670",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#979576",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#a4a27a",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#aeae80",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b8b892",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#141617",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#524634",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#735f45",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#84735c",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#928370",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#9e9281",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#a99e90",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#b3aa9e",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#bbb5aa",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#1a140d",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#5c4330",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#82574d",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#9f6763",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#b77375",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#c58185",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#cb9194",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#d09fa1",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#d5abad",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#121715",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3b4b46",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#556561",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#687975",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#798987",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#869795",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#93a3a3",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#a0aeae",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#acb8b8",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#1c1410",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#61412e",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#88563a",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#a56641",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#bd7349",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#c48560",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#cb9474",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#d1a187",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d6ad97",
        },
      ],
    },
  ],
  "terminal": [
    "#15150d",
    "#8a1e24",
    "#464a39",
    "#4a483e",
    "#524634",
    "#5c4330",
    "#3b4b46",
    "#616353",
    "#48493b",
    "#d7787b",
    "#91958b",
    "#979576",
    "#9e9281",
    "#c58185",
    "#869795",
    "#8c9786",
  ],
}
`;
